体裁、artisoc Cloudページ追加

--- a/articles/toc.yml
+++ b/articles/toc.yml
@@ -10,3 +10,7 @@
     href: SimulationExecution.md
   - name: 歩行者の行動ルールの変更
     href: SimulationRuleChange.md
+- name: 参考資料
+  items:
+  - name: artisoc Cloudについて
+    href: ArtisocCloudReference.md
